tests/spec/emit/snapshots/closure_param_shadow.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> int {
    let f = |x: int| -> int {
      let x = x + 10
      x
    }
    f(1)
  }
---
package main

func test() int {
	f := func(x int) int {
		x_1 := x + 10
		return x_1
	}
	return f(1)
}
