tests/spec/emit/snapshots/closure_param_shadow_outer_access.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> string {
    let x = "outer"
    let f = |x: int| -> string {
      let x = x * 2
      f"doubled: {x}"
    }
    let result = f(5)
    f"{result} and {x}"
  }
---
package main

import "fmt"

func test() string {
	x := "outer"
	f := func(x int) string {
		x_1 := x * 2
		return fmt.Sprintf("doubled: %d", x_1)
	}
	result := f(5)
	return result + " and " + x
}
