tests/spec/emit/snapshots/closure_tail_expr_captures_mutable.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_counter(start: int) -> fn() -> int {
    let mut n = start;
    || {
      n += 1;
      n
    }
  }
---
package main

func makeCounter(start int) func() int {
	n := start
	return func() int {
		n++
		return n
	}
}
