tests/spec/emit/snapshots/closure_with_assignment_body.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() {
    let mut count = 0;
    let inc = || { count = count + 1; };
    inc();
  }
---
package main

func test() {
	count := 0
	inc := func() {
		count++
	}
	inc()
}
