tests/spec/emit/snapshots/closure_with_multiple_params.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() {
    let add = |a: int, b: int| a + b;
  }
---
package main

func test() {
	_ = func(a, b int) int {
		return a + b
	}
}
