tests/spec/emit/snapshots/coercion_in_map_value_via_indexed_assignment.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  struct Doubler {}
  
  impl Doubler {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  fn main() {
    let mut m = Map.new<string, io.Reader>()
    let d = Doubler {}
    m["src"] = d
    let _ = m
  }
---
package main

import "io"

type Doubler struct{}

func (d Doubler) Read(_ []uint8) (int, error) {
	return 0, nil
}

func main() {
	m := make(map[string]io.Reader)
	d := Doubler{}
	m["src"] = d
	_ = m
}
