tests/spec/emit/snapshots/coercion_in_struct_literal_field.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  struct Doubler {}
  
  impl Doubler {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  struct Wrapper {
    reader: io.Reader,
  }
  
  fn main() {
    let d = Doubler {}
    let w = Wrapper { reader: d }
    let _ = w
  }
---
package main

import "io"

type Doubler struct{}

func (d Doubler) Read(_ []uint8) (int, error) {
	return 0, nil
}

type Wrapper struct {
	reader io.Reader
}

func main() {
	d := Doubler{}
	w := Wrapper{reader: d}
	_ = w
}
