tests/spec/emit/snapshots/coercion_in_tail_return_position.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  struct Doubler {}
  
  impl Doubler {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  fn make() -> io.Reader {
    let d = Doubler {}
    d
  }
  
  fn main() {
    let _ = make()
  }
---
package main

import "io"

type Doubler struct{}

func (d Doubler) Read(_ []uint8) (int, error) {
	return 0, nil
}

func make_() io.Reader {
	d := Doubler{}
	return d
}

func main() {
	make_()
}
