tests/spec/emit/snapshots/coercion_in_typed_let_binding.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:io"
  
  struct Doubler {}
  
  impl Doubler {
    fn Read(self, p: mut Slice<uint8>) -> Partial<int, error> {
      Partial.Ok(0)
    }
  }
  
  fn main() {
    let d = Doubler {}
    let r: io.Reader = d
    let _ = r
  }
---
package main

import "io"

type Doubler struct{}

func (d Doubler) Read(_ []uint8) (int, error) {
	return 0, nil
}

func main() {
	d := Doubler{}
	var r io.Reader = d
	_ = r
}
